refactor: Store 상태 없애기 및 static화